fix openapi schema authentication
